# feign-framework

./: .gitignore  check-structure.sh  pom.xml
core/: pom.xml
core/src/main/java/com/feign/framework/: FeignClient.java  FeignException.java  FeignResponse.java  Request.java  Response.java  package-info.java
core/src/main/java/com/feign/framework/codec/: Decoder.java  (+1 more)
core/src/test/java/com/feign/framework/: FeignExceptionTest.java  ResponseTest.java  package-info.java
docs/: CODE-ANALYSIS.md  FIXES.md  USAGE.md
docs/superpowers/plans/: 2026-06-10-annotation-processor.md  2026-06-10-core-abstraction-layer.md  2026-06-10-java-implementation-layer.md  2026-06-10-python-implementation-layer.md
docs/superpowers/specs/: 2026-06-10-openfeign-replacement-design.md
examples/: AdvancedExample.java  FeignClientDemo.java  ProtocolExamples.java  SpringBootExample.java  UserService.java
examples/server/: GrpcServerExample.java  HttpServerExample.java  WebSocketServerExample.java
feign-spring/: pom.xml
java-impl/: pom.xml
java-processor/: pom.xml
python-impl/: README.md  pyproject.toml
python-impl/src/feign/: __init__.py  interfaces.py  models.py
python-impl/src/feign/client/: __init__.py  http_client.py
python-impl/src/feign/loadbalancer/: __init__.py
python-impl/src/feign/retry/: __init__.py  default_retry_policy.py  retry_policy.py
python-impl/tests/client/: feign_client_test.py  http_client_test.py
python-impl/tests/loadbalancer/: __init__.py  random_test.py  round_robin_test.py
python-impl/tests/retry/: __init__.py  default_retry_policy_test.py
(+70 files in other folders)
